[workspace]
members = ["sp", "proto"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["futures-rs", "ethereum", "decentralized", "email"]
description = "SP-centric decentralized mail service network"
readme = "README.md"

[workspace.dependencies]
# serde support
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }


# error
thiserror = "^1"
anyhow = "^1"

# async
async-trait = "^0.1"
futures = "^0.3"

bytes = "^1.4.0"


# proto
protobuf-codegen = "^3.0"
protoc-bin-vendored = "^3.0"
protobuf = "^3.0"


# internals
agora-mail-sp = { path = "./sp", version = "^0.1" }
agora-mail-proto = { path = "./proto", version = "^0.1" }
