[workspace]
members = ["sp", "types", "storage", "gateway", "sp_network"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["futures-rs", "ethereum", "decentralized", "email"]
description = "DIMSP(SP-centric Decentralized Instant Message Sync Protocol)"
readme = "README.md"

[workspace.dependencies]
# serde support
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }


# error
thiserror = "^1"
anyhow = "^1"

# async
async-trait = "^0.1"
futures = "^0.3"
async-std = { version = "1.12.0", features = ["attributes"] }

# proto
protobuf-codegen = "^3.0"
protoc-bin-vendored = "^3.0"
protobuf = "^3.0"


# internals
dimsp-sp = { path = "./sp", version = "^0.1" }
dimsp-spnetwork = { path = "./sp_network", version = "^0.1" }
dimsp-types = { path = "./types", version = "^0.1" }
dimsp-gateway = { path = "./gateway", version = "^0.1" }
dimsp-storage = { path = "./storage", version = "^0.1" }

# others
log = "^0.4"
hex = "^0.4"
once_cell = "1.17.1"
rs-snowflake = "0.6.0"
pretty_env_logger = "^0.4"
bytes = "^1.4.0"

# crypto
sha3 = "0.10.6"
rand = { version = "0.8.5", features = ["getrandom"] }

# ipfs
libipld = "0.16.0"
rusty-leveldb = "1.0.6"
