[package]
name = "dimsp-gateway"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "Dimsp sp core library"
documentation = "https://docs.rs/dimsp-gateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
