[package]
name = "dimsp-network"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "Dimsp network abstract layer"
documentation = "https://docs.rs/dimsp-network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
