[package]
name = "dimsp-sp"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "AgoraMail service provider core framework"
documentation = "https://docs.rs/dimsp-sp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde support
serde = { workspace = true }


# error
thiserror = { workspace = true }
anyhow = { workspace = true }

# async 
async-trait = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }


bytes = { workspace = true }


dimsp-types = { workspace = true }

log = { workspace = true }


once_cell = { workspace = true }
protobuf = { workspace = true }
