[package]
name = "dimsp-storage"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "DimspHub storage framework"
documentation = "https://docs.rs/dimsp-storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde support
serde = { workspace = true }

# error
thiserror = { workspace = true }
anyhow = { workspace = true }

# async 
async-trait = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }

# others
bytes = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
rs-snowflake = { workspace = true }
protobuf = { workspace = true }

#internals
dimsp-types = { workspace = true }
dimsp-sp = { workspace = true }
