[package]
name = "dimsp-types"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "AgoraMail protocol basic types"
documentation = "https://docs.rs/dimsp-types"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# serde support
serde = { workspace = true }
hex = { workspace = true }

# error
thiserror = { workspace = true }
anyhow = { workspace = true }

# async
async-trait = { workspace = true }


# crypto
sha3 = { workspace = true }

# ipld
libipld = { workspace = true, features = ["serde-codec"] }

[build-dependencies]
protobuf-codegen = { workspace = true }
protoc-bin-vendored = { workspace = true }
